@@ -1,4 +1,4 @@
-.\"     $NetBSD: vnsubr.9,v 1.38 2009/06/02 18:09:34 jnemeth Exp $
+.\"     $NetBSD: vnsubr.9,v 1.39 2010/06/18 16:29:01 hannken Exp $
 .\"
 .\" Copyright (c) 2001, 2005, 2006 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 2, 2009
+.Dd June 18, 2010
 .Dt VNSUBR 9
 .Os
 .Sh NAME
@@ -40,8 +40,6 @@
 .Nm vn_markexec ,
 .Nm vn_marktext ,
 .Nm vn_rdwr ,
-.Nm vn_restorerecurse ,
-.Nm vn_setrecurse ,
 .Nm vn_open ,
 .Nm vn_stat ,
 .Nm vn_writechk
@@ -64,10 +62,6 @@
 .Fn vn_markexec "struct vnode *vp"
 .Ft void
 .Fn vn_marktext "struct vnode *vp"
-.Ft u_int
-.Fn vn_setrecurse "struct vnode *vp"
-.Ft void
-.Fn vn_restorerecurse "struct vnode *vp" "u_int flags"
 .Ft int
 .Fn vn_open "struct nameidata *ndp" "int fmode" "int cmode"
 .Ft int
@@ -155,20 +149,6 @@ as containing executable code of a running process.
 Common code to mark the vnode
 .Fa vp
 as being the text of a running process.
-.It Fn vn_setrecurse "vp"
-Common code to enable
-.Dv LK_CANRECURSE
-on the vnode lock for vnode
-.Fa vp .
-.Fn vn_setrecurse
-returns the new
-.Xr lockmgr 9
-flags after the update.
-.It Fn vn_restorerecurse "vp" "flags"
-Common code to restore the vnode lock flags for the vnode
-.Fa vp .
-It is called when done with
-.Fn vn_setrecurse .
 .It Fn vn_open "ndp" "fmode" "cmode"
 Common code for vnode open operations.
 The pathname is described in the nameidata pointer (see
